# hackerrank-practice

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  show_report.sh
tests/: __init__.py
