[tool.poetry]
name = "hackerrank-practice"
version = "0.0.1"
description = "Python 3 solutions for HackerRank problems"
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "GPLv3"
repository = "https://github.com/inpefess/hackerrank-practice"
readme = "README.md"
classifiers=[
	"Programming Language :: Python :: 3.9",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Education",
	"Development Status :: 1 - Planning",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: Education",
	"Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.dev-dependencies]
pylint = "*"
mypy = "*"
rope = "*"
flake8 = "*"
virtualenv = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
black = "*"

[tool.black]
line-length=79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
